-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
5.15.2, 6.0.0
-
None
qtbase, qt3d, qtdeclarative, qtquickcontrols2 do (still) contain source files with QT_BEGIN_LICENSE:LGPL3 header. This header contains a reference to a LICENSE.GPL file that we don't ship anymore:
** Alternatively, this file may be used under the terms of the GNU ** General Public License version 2.0 or later as published by the Free ** Software Foundation and appearing in the file LICENSE.GPL included in ** the packaging of this file. Please review the following information to ** ensure the GNU General Public License version 2.0 requirements will be ** met: http://www.gnu.org/licenses/gpl-2.0.html.
| For Gerrit Dashboard: QTBUG-90321 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 330039,5 | RHI: Use QT_BEGIN_LICENSE:LGPL header | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 330042,6 | Replace QT_BEGIN_LICENSE:LGPL3 header | dev | qt/qt3d | Status: MERGED | +2 | 0 |
| 330259,1 | RHI: Use QT_BEGIN_LICENSE:LGPL header | 6.0 | qt/qtbase | Status: ABANDONED | +2 | 0 |
| 363786,2 | Replace QT_BEGIN_LICENSE:LGPL3 header | 6.2 | qt/qt3d | Status: MERGED | +2 | 0 |