Replace QT_BEGIN_LICENSE:LGPL3 header

Replace outdated LGPL3 with LGPL header in src, and
GPL3-EXCEPT in tests.

Task-number: QTBUG-90321
Pick-to: 6.2
Change-Id: I3f6491cb402a993a4341a983c780337e8658c256
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>